DTOs y Mappers Conductor y Vehiculo. usando mappers en servicio y controlador de conductor.